# amici-knowledge-hub

./: .gitignore  README.md  chainlit.md  load_data.py  main.py  prepare_data.py  pyproject.toml  sources.yaml
data/: arxiv_2404_16038_chunks.csv  arxiv_2502_16153_chunks.csv  gov_ai_copyright_chunks.csv  stable_diffusion_qna.csv  stable_diffusion_qna_chunks.csv  wiki_midjourney_chunks.csv  wiki_stable_diffusion_chunks.csv
public/: theme.json
