[project]
name = "test-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "bs4>=0.0.2",
    "chainlit>=2.4.400",
    "dotenv>=0.9.9",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-mongodb>=0.6.0",
    "langchain-openai>=0.3.12",
    "lxml>=5.3.2",
    "openai>=1.70.0",
    "pandas>=2.2.3",
    "pymongo>=4.11.3",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
    "tiktoken>=0.9.0",
    "unstructured>=0.17.2",
]
